--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "apexcharts": "^3.37.1",
+    "axios": "^1.3.4",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
